--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,83 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.example</groupId>
-  <artifactId>Project_WishLists</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>Archetype - Project_WishLists</name>
-  <url>http://maven.apache.org</url>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<modelVersion>4.0.0</modelVersion>
+<groupId>org.example</groupId>
+<artifactId>Project_WishLists</artifactId>
+<version>1.0-SNAPSHOT</version>
+<name>Archetype - Project_WishLists</name>
+<url>http://maven.apache.org</url>
+
+<properties>
+  <maven.compiler.source>17</maven.compiler.source>
+  <maven.compiler.target>17</maven.compiler.target>
+  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  <selenium.version>4.31.0</selenium.version>
+  <webdrivermanager.version>6.1.0</webdrivermanager.version>
+  <junit.version>5.10.2</junit.version>
+  <assertj.version>3.27.3</assertj.version>
+  <log4j.version>2.24.3</log4j.version>
+  <maven.compiler.version>3.14.0</maven.compiler.version>
+  <maven.surefire.version>3.5.3</maven.surefire.version>
+  <javafaker.version>1.0.2</javafaker.version>
+</properties>
+
+<dependencies>
+  <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>${selenium.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>${webdrivermanager.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-params</artifactId>
+    <version>${junit.version}</version>
+  </dependency>
+
+  <dependency>
+    <groupId>org.assertj</groupId>
+    <artifactId>assertj-core</artifactId>
+    <version>${assertj.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>${log4j.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>com.github.javafaker</groupId>
+    <artifactId>javafaker</artifactId>
+    <version>${javafaker.version}</version>
+  </dependency>
+</dependencies>
+
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>${maven.compiler.version}</version>
+      <configuration>
+        <source>${maven.compiler.source}</source>
+        <target>${maven.compiler.target}</target>
+      </configuration>
+    </plugin>
+    <plugin>
+      <!--чтобы запускать тесты через консоль-->
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>${maven.surefire.version}</version>
+      <configuration>
+        <systemPropertyVariables>
+          <browser>chrome</browser>
+          <base.url>https://wishlist.otus.kartushin.su/wishlists/</base.url>
+        </systemPropertyVariables>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
 </project>
